--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="container">
-        <button id="toggleDarkMode" class="floating-button">
+        <!-- <button id="toggleDarkMode" class="floating-button">
             <i class="ri-sun-line"></i>
-        </button>
+        </button> -->
         <h1 class="titulo-sesion">¡Bienvenida Amor!</h1>
         <p>Ingresa nuestra fecha de aniversario para continuar.</p>
         <form id="loginForm">
