Agrego imágenes para la galería

--- a/dashboard.html
+++ b/dashboard.html
@@ -146,7 +146,7 @@
             <div class="gallery">
                 <!-- Foto 1 -->
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG-20250411-WA0000.jpg"
+                    <img src="img/IMG-20250411-WA0000.jpg"
                         alt="Descripción de la foto 1">
                     <div class="gallery-description">
                         <p>Nuestro primer día juntos ❤️</p>
