Corrijo ruta de imagen en HTML

--- a/dashboard.html
+++ b/dashboard.html
@@ -146,7 +146,7 @@
             <div class="gallery">
                 <!-- Foto 1 -->
                 <div class="gallery-item">
-                    <img src="img/IMG-20250411-WA0000.jpg"
+                    <img src="assets/img/IMG-20250411-WA0000.jpg"
                         alt="Descripción de la foto 1">
                     <div class="gallery-description">
                         <p>Nuestro primer día juntos ❤️</p>
@@ -155,7 +155,7 @@
 
                 <!-- Foto 2 -->
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG-20250525-WA0037.jpg"
+                    <img src="assets/img/IMG-20250525-WA0037.jpg"
                         alt="Descripción de la foto 2">
                     <div class="gallery-description">
                         <p>Un paseo inolvidable 🌳</p>
@@ -164,7 +164,7 @@
 
                 <!-- Foto 3 -->
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG_20250610_105341.jpg"
+                    <img src="assets/img/IMG_20250610_105341.jpg"
                         alt="Descripción de la foto 3">
                     <div class="gallery-description">
                         <p>Celebrando nuestro primer mes 🎉</p>
@@ -172,7 +172,7 @@
                 </div>
                 <!-- Foto 1 -->
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG-20250504-WA0006.jpg"
+                    <img src="assets/img/IMG-20250504-WA0006.jpg"
                         alt="Descripción de la foto 1">
                     <div class="gallery-description">
                         <p>Me gusta estar contigo ❤️</p>
@@ -181,7 +181,7 @@
 
                 <!-- Foto 2 -->
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG-20250509-WA0046.jpg"
+                    <img src="assets/img/IMG-20250509-WA0046.jpg"
                         alt="Descripción de la foto 2">
                     <div class="gallery-description">
                         <p>Me encantas mucho🌳</p>
@@ -190,7 +190,7 @@
 
                 <!-- Foto 3 -->
                 <div class="gallery-item">
-                    <img src="/assets/img/IMG_20250602_173550.jpg"
+                    <img src="assets/img/IMG_20250602_173550.jpg"
                         alt="Descripción de la foto 3">
                     <div class="gallery-description">
                         <p>Te adoro demaciado 🎉</p>
@@ -208,63 +208,63 @@
                 <div class="timeline-event">
                     <h3>Primera Cita</h3>
                     <p>Marzo de 2025</p>
-                    <img src="/assets/img/SAVE_20250610_114442.jpg"
+                    <img src="assets/img/SAVE_20250610_114442.jpg"
                         alt="Primera cita">
                     <p>No tengo fotos de nuestra primera cita, asi que puse esta jajajajaja</p>
                 </div>
                 <div class="timeline-event">
                     <h3>Segunda Cita</h3>
                     <p>04 de Abril de 2025</p>
-                    <img src="/assets/img/IMG-20250410-WA0027.jpg"
+                    <img src="assets/img/IMG-20250410-WA0027.jpg"
                         alt="Viaje a la playa">
                     <p>Nuestra segunda cita fue en un pequeño lugar de Candelaria. ¡La pasamos muy rico!</p>
                 </div>
                  <div class="timeline-event">
                     <h3>Salida al parque</h3>
                     <p>18 de Abril de 2025</p>
-                    <img src="/assets/img/IMG-20250418-WA0013.jpg"
+                    <img src="assets/img/IMG-20250418-WA0013.jpg"
                         alt="Viaje a la playa">
                     <p>Disfrutamos del sol, un helado y un rato agradable juntos!</p>
                 </div>
                  <div class="timeline-event">
                     <h3>Una tarde juntos</h3>
                     <p>02 de Mayo 2025</p>
-                    <img src="/assets/img/IMG-20250502-WA0048.jpg"
+                    <img src="assets/img/IMG-20250502-WA0048.jpg"
                         alt="Viaje a la playa">
                     <p>Disfrutamos de la tarde y nos tomamos fotos los dos!</p>
                 </div>
                  <div class="timeline-event">
                     <h3>Tarde de fotos</h3>
                     <p>04 de Mayo 2025</p>
-                    <img src="/assets/img/IMG-20250504-WA0006.jpg"
+                    <img src="assets/img/IMG-20250504-WA0006.jpg"
                         alt="Viaje a la playa">
                     <p>Una tarde de fotos y videos locos en tu cuarto</p>
                 </div>
                  <div class="timeline-event">
                     <h3>Tu cumpleaños</h3>
                     <p>08 de Mayo de 2025</p>
-                    <img src="/assets/img/IMG-20250509-WA0035.jpg"
+                    <img src="assets/img/IMG-20250509-WA0035.jpg"
                         alt="Viaje a la playa">
                     <p>El día más esperado por ti, compartimos, disfrutamos y sé que la pasaste genial</p>
                 </div>
                 <div class="timeline-event">
                     <h3>Un rato contigo</h3>
                     <p>09 de Mayo de 2025</p>
-                    <img src="/assets/img/IMG-20250509-WA0031.jpg"
+                    <img src="assets/img/IMG-20250509-WA0031.jpg"
                         alt="Viaje a la playa">
                     <p>Otra tarde más llena de fotos, de videos, de besos y muchos abrazos </p>
                 </div>
                 <div class="timeline-event">
                     <h3>Un mini paseo</h3>
                     <p>25 de Mayo de 2025</p>
-                    <img src="/assets/img/IMG-20250525-WA0037.jpg"
+                    <img src="assets/img/IMG-20250525-WA0037.jpg"
                         alt="Viaje a la playa">
                     <p>Un mini paseo lleno de momentos bonitos, de compartir contigo y tu familia</p>
                 </div>
                 <div class="timeline-event">
                     <h3>Una salida más</h3>
                     <p>02 de Junio de 2025</p>
-                    <img src="/assets/img/IMG-20250602-WA0023.jpg"
+                    <img src="assets/img/IMG-20250602-WA0023.jpg"
                         alt="Viaje a la playa">
                     <p>Un dia más compartiendo momentos contigo, comiendo helado, riendo, tomados de la mano, siendo felices!</p>
                 </div>
@@ -380,7 +380,7 @@
                     </div>
                     <div class="music-controls">
                         <audio controls>
-                            <source src="/assets/music/Jay Wheeler - EaZt (Cover Audio).mp3" type="audio/mpeg">
+                            <source src="assets/music/Jay Wheeler - EaZt (Cover Audio).mp3" type="audio/mpeg">
                             Tu navegador no soporta el elemento de audio.
                         </audio>
                     </div>
@@ -397,7 +397,7 @@
                     </div>
                     <div class="music-controls">
                         <audio controls>
-                            <source src="/assets/music/La Razón de Mi Vida.mp3" type="audio/mpeg">
+                            <source src="assets/music/La Razón de Mi Vida.mp3" type="audio/mpeg">
                             Tu navegador no soporta el elemento de audio.
                         </audio>
                     </div>
@@ -414,7 +414,7 @@
                     </div>
                     <div class="music-controls">
                         <audio controls>
-                            <source src="/assets/music/Jerry Rivera - Casi un Hechizo (Audio).mp3" type="audio/mpeg">
+                            <source src="assets/music/Jerry Rivera - Casi un Hechizo (Audio).mp3" type="audio/mpeg">
                             Tu navegador no soporta el elemento de audio.
                         </audio>
                     </div>
@@ -431,7 +431,7 @@
                     </div>
                     <div class="music-controls">
                         <audio controls>
-                            <source src="/assets/music/Jay Wheeler - Me Enamoré (Cover Audio).mp3" type="audio/mpeg">
+                            <source src="assets/music/Jay Wheeler - Me Enamoré (Cover Audio).mp3" type="audio/mpeg">
                             Tu navegador no soporta el elemento de audio.
                         </audio>                        
                     </div>
@@ -449,7 +449,7 @@
                     </div>
                     <div class="music-controls">
                         <audio controls>
-                            <source src="/assets/music/Jorge Celedón - Me Gustas Mucho Oficial l Video Lyric.mp3" type="audio/mpeg">
+                            <source src="assets/music/Jorge Celedón - Me Gustas Mucho Oficial l Video Lyric.mp3" type="audio/mpeg">
                             Tu navegador no soporta el elemento de audio.
                         </audio>
                     </div>
@@ -465,7 +465,7 @@
             <div class="sorpresa-container">
                 <button id="sorpresa-btn" class="sorpresa-btn"><i class="ri-star-smile-line"></i> ¡Haz clic para ver la sorpresa!</button>
                 <div id="sorpresa-content" class="sorpresa-content hidden">
-                    <img src="/assets/img/IMG-20250531-WA0065.jpg" alt="Sorpresa">
+                    <img src="assets/img/IMG-20250531-WA0065.jpg" alt="Sorpresa">
                     <p>¡Feliz primer juntos mi Amore, te adoroooo! 🎉🎂</p>
                 </div>
             </div>
