Corrijo redirección o nombres de imágenes

--- a/dashboard.html
+++ b/dashboard.html
@@ -133,9 +133,7 @@
 
     <!-- Contenido Principal -->
     <main>
-        <!-- <button id="toggleDarkMode" class="floating-button" title="Modo">
-            <i class="ri-sun-line"></i>
-        </button> -->
+       
 
         <section id="inicio" class="content-section active">
             <h2>¡Bienvenida Mi Amor!</h2> <br>
@@ -215,7 +213,7 @@
                 <div class="timeline-event">
                     <h3>Segunda Cita</h3>
                     <p>04 de Abril de 2025</p>
-                    <img src="assets/img/IMG-20250410-WA0027.jpg"
+                    <img src="assets/img/ .jpg"
                         alt="Viaje a la playa">
                     <p>Nuestra segunda cita fue en un pequeño lugar de Candelaria. ¡La pasamos muy rico!</p>
                 </div>
@@ -270,25 +268,7 @@
                 </div>
             </div>
 
-            <!-- Galería de Fotos -->
-            <!-- <h3>Recuerdos</h3>
-            <div class="gallery">
-                <img src="https://img.fotocommunity.com/love-e336bfd1-7a9b-43a4-9b68-3bec419632db.jpg?width=1000"
-                    alt="Recuerdo 1">
-                <img src="https://img.fotocommunity.com/love-e336bfd1-7a9b-43a4-9b68-3bec419632db.jpg?width=1000"
-                    alt="Recuerdo 2">
-                <img src="https://img.fotocommunity.com/love-e336bfd1-7a9b-43a4-9b68-3bec419632db.jpg?width=1000"
-                    alt="Recuerdo 3">
-            </div> -->
-            <!-- Playlist de Canciones -->
-            <!-- <div class="playlist">
-                <h3>Nuestra Playlist</h3>
-                <ul>
-                    <li><a href="#">Canción 1 - Artista</a></li>
-                    <li><a href="#">Canción 2 - Artista</a></li>
-                    <li><a href="#">Canción 3 - Artista</a></li>
-                </ul>
-            </div> -->
+           
 
         </section>
 
@@ -309,43 +289,6 @@
                     </svg> Nuevo Mensaje</button>
             </div>
         </section>
-
-        <!-- <section id="fotos" class="content-section">
-            <h2>Nuestras Fotos</h2>
-            <p>Explora nuestros momentos especiales capturados en imágenes.</p>
-
-            <div class="collage-container">
-                <div class="collage-item">
-                    <img src="https://img.pikbest.com/origin/09/23/03/46jpIkbEsTEJX.png!w700wp"
-                        alt="Descripción de la foto 1">
-                    <div class="overlay">
-                        <p>Momentos inolvidables</p>
-                    </div>
-                </div>
-                <div class="collage-item">
-                    <img src="https://img.pikbest.com/origin/09/23/03/46jpIkbEsTEJX.png!w700wp"
-                        alt="Descripción de la foto 2">
-                    <div class="overlay">
-                        <p>Aventuras compartidas</p>
-                    </div>
-                </div>
-                <div class="collage-item">
-                    <img src="https://img.pikbest.com/origin/09/23/03/46jpIkbEsTEJX.png!w700wp"
-                        alt="Descripción de la foto 3">
-                    <div class="overlay">
-                        <p>Risas y alegría</p>
-                    </div>
-                </div>
-                <div class="collage-item">
-                    <img src="https://img.pikbest.com/origin/09/23/03/46jpIkbEsTEJX.png!w700wp"
-                        alt="Descripción de la foto 4">
-                    <div class="overlay">
-                        <p>Naturaleza y paz</p>
-                    </div>
-                </div>
-                 Agrega más imágenes según sea necesario 
-            </div>
-        </section> -->
 
         <section id="musicas" class="content-section">
             <h2>Canciones</h2>
