Corrijo redirección o nombres de imágenes

--- a/dashboard.html
+++ b/dashboard.html
@@ -409,7 +409,13 @@
                 <button id="sorpresa-btn" class="sorpresa-btn"><i class="ri-star-smile-line"></i> ¡Haz clic para ver la sorpresa!</button>
                 <div id="sorpresa-content" class="sorpresa-content hidden">
                     <img src="assets/img/IMG-20250531-WA0065.jpg" alt="Sorpresa">
-                    <p>¡Feliz primer juntos mi Amore, te adoroooo! 🎉🎂</p>
+                    <p>Hoy celebramos nuestro primer mes de amor, y aunque parezca poco tiempo, ha sido suficiente para llenar mi corazón de felicidad, sonrisas y momentos que jamás olvidaré. Cada día contigo ha sido un regalo, una nueva aventura, una razón más para sonreír.
+
+Gracias por tu dulzura, por tu compañía, por esos mensajes que me alegran el día y por cada instante que compartimos. Este primer mes ha sido solo el comienzo de algo hermoso, y no puedo esperar a seguir construyendo muchos recuerdos más contigo.
+
+Te adoro con todo mi corazón, y quiero que sepas que valoro cada momento a tu lado. Feliz primer mes, mi amor. Que este sea el primero de muchos meses —y años— llenos de amor, complicidad y felicidad.
+
+❤️ Con amor, Frank 🎉🎂</p>
                 </div>
             </div>
             
